<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ui.introcution.IntroductionFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_introduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/intro_card_contraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/title_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_intro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/style_title" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon_info"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtv_intro"
                app:layout_constraintEnd_toStartOf="@+id/txtv_intro"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/title_intro"
                app:layout_constraintTop_toBottomOf="@+id/title_intro" />

            <TextView
                android:id="@+id/txtv_intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/read_intro"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/title_intro"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/title_intro" />

            <ImageView
                android:id="@+id/icon_info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon_info"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtv_intro_2"
                app:layout_constraintEnd_toStartOf="@+id/txtv_intro_2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/txtv_intro_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/create_intro"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtv_intro"
                app:layout_constraintStart_toEndOf="@+id/icon_info2"
                app:layout_constraintTop_toBottomOf="@+id/txtv_intro" />

            <ImageView
                android:id="@+id/icon_info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon_info"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtv_intro_3"
                app:layout_constraintEnd_toStartOf="@+id/txtv_intro_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/txtv_intro_3" />

            <TextView
                android:id="@+id/txtv_intro_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/edit_intro"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtv_intro_2"
                app:layout_constraintStart_toEndOf="@+id/icon_info3"
                app:layout_constraintTop_toBottomOf="@+id/txtv_intro_2" />

            <ImageView
                android:id="@+id/icon_info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon_info"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtv_intro_4"
                app:layout_constraintEnd_toStartOf="@+id/txtv_intro_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/txtv_intro_4" />

            <TextView
                android:id="@+id/txtv_intro_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/delete_intro"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/txtv_intro_3"
                app:layout_constraintStart_toEndOf="@+id/icon_info4"
                app:layout_constraintTop_toBottomOf="@+id/txtv_intro_3" />

            <ImageView
                android:id="@+id/icon_info5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/icon_info"
                android:src="@drawable/ic_baseline_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtv_intro_5"
                app:layout_constraintEnd_toStartOf="@+id/txtv_intro_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/txtv_intro_5" />

            <TextView
                android:id="@+id/txtv_intro_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/close_intro"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtv_intro_4"
                app:layout_constraintStart_toEndOf="@+id/icon_info5"
                app:layout_constraintTop_toBottomOf="@+id/txtv_intro_4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_next_intro"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>