<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_shoes"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.welcome.WelcomeFragment"
        android:label="fragment_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_introductionFragment"
            app:destination="@id/introductionFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out"
            app:popUpTo="@id/nav_shoes" />
    </fragment>
    <fragment
        android:id="@+id/introductionFragment"
        android:name="com.udacity.shoestore.ui.introcution.IntroductionFragment"
        android:label="fragment_introduction"
        tools:layout="@layout/fragment_introduction" >
        <action
            android:id="@+id/action_introductionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out"
            app:popUpTo="@id/nav_shoes" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ui.shoelist.ShoeListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_detailShoeFragment"
            app:destination="@id/detailShoeFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out"
            app:popUpTo="@id/shoeListFragment" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/anim_in"
            app:popEnterAnim="@anim/anim_out" />
    </fragment>
    <fragment
        android:id="@+id/detailShoeFragment"
        android:name="com.udacity.shoestore.ui.detail.DetailShoeFragment"
        android:label="@string/fragment_detail_shoe"
        tools:layout="@layout/fragment_detail_shoe">
        <action
            android:id="@+id/action_detailShoeFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/anim_out"
            app:popEnterAnim="@anim/anim_in"
            app:popUpTo="@id/nav_shoes" />
    </fragment>

</navigation>