<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".ui.detail.DetailShoeFragment">

    <data>
        <variable
            name="detailViewModel"
            type="com.udacity.shoestore.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_card_contraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/title_detail"
                    style="@style/style_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_diemen"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:layout_marginEnd="@dimen/margin_diemen"
                    android:text="@string/fragment_detail_shoe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Edit NAME -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_diemen"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:layout_marginEnd="@dimen/margin_diemen"
                    app:layout_constraintEnd_toEndOf="@+id/title_detail"
                    app:layout_constraintStart_toStartOf="@+id/title_detail"
                    app:layout_constraintTop_toBottomOf="@+id/title_detail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:text="@={detailViewModel.title}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Edit SIZE -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_sixe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_diemen"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:layout_marginEnd="@dimen/margin_diemen"
                    app:layout_constraintEnd_toEndOf="@+id/text_input_name"
                    app:layout_constraintStart_toStartOf="@+id/text_input_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_size"
                        android:inputType="numberDecimal"
                        android:text="@={detailViewModel.sizer}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Edit COMPANY -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_diemen"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:layout_marginEnd="@dimen/margin_diemen"
                    app:layout_constraintEnd_toEndOf="@+id/text_input_sixe"
                    app:layout_constraintStart_toStartOf="@+id/text_input_sixe"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_sixe">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_company"
                        android:text="@={detailViewModel.companiest}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Edit DESCRIPTION -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_diemen"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:layout_marginEnd="@dimen/margin_diemen"
                    app:layout_constraintEnd_toEndOf="@+id/text_input_company"
                    app:layout_constraintStart_toStartOf="@+id/text_input_company"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_company">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/hint_description"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:text="@={detailViewModel.descriptions}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <!-- Accions bittuons -->
                <Button
                    android:id="@+id/btn_cancel_detail"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_style"
                    android:text="@android:string/cancel"
                    android:textColor="@color/cardview_light_background"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_save_detail"
                    app:layout_constraintEnd_toStartOf="@+id/btn_save_detail" />

                <Button
                    android:id="@+id/btn_save_detail"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="@dimen/margin_diemen"
                    android:background="@drawable/btn_style"
                    android:text="@string/save"
                    android:textColor="@color/cardview_light_background"
                    android:enabled="@{detailViewModel.flagButtonSave}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_description" />

                <Button
                    android:id="@+id/btn_delete_detail"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:background="@drawable/btn_style"
                    android:enabled="@{detailViewModel.flagisEdit}"
                    android:text="@string/delete"
                    android:textColor="@color/cardview_light_background"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_detail"
                    app:layout_constraintEnd_toStartOf="@+id/btn_cancel_detail"
                    app:layout_constraintHorizontal_bias="0.271"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_cancel_detail" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>